--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest",
     "test:ci": "jest --ci",
     "prepare": "husky install",
     "check-types": "tsc --pretty --noEmit",
