--- a/package.json
+++ b/package.json
@@ -37,12 +37,9 @@
     "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "autoprefixer": "^10.4.13",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.0",
     "jest": "^29.2.2",
     "jest-dom": "^4.0.0",
@@ -50,6 +47,18 @@
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-next": "13.0.5",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.1.6",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-no-only-tests": "3.1.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "lint-staged": "11.0.1"
   }
 }
